# test1

.github/workflows/: test-ci.yml
banksys/: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
banksys/.github/workflows/: ci.yml
banksys/src/backend/: __init__.py  app.py
banksys/src/core/: __init__.py  data_loader.py
banksys/src/utils/: __init__.py  analyzer.py
banksys/standards/: 00-HOW-TO-USE.md  00-QUICK-START.md  01-CICD-SETUP-GUIDE.md  02-PROJECT-STRUCTURE.md  03-DOCKER-TEMPLATE.md  04-GITHUB-ACTIONS-TEMPLATE.md  05-LESSONS-LEARNED.md  06-CROSS-PLATFORM-GUIDE.md  07-TROUBLESHOOTING.md  08-CODE-STYLE.md  09-PROJECT-RECOVERY.md  AI-PROMPT-SIMPLE.md  AI-PROMPT-TEMPLATE.md  INDEX.md  PROJECT-BASE-INFO.md  PROJECT-CONFIG.md  README.md  USAGE-EXAMPLE.md
banksys/standards/templates/: .dockerignore  .gitattributes  .gitignore  Dockerfile  ci.yml  pyproject.toml
banksys/tests/: test_analyzer.py  test_app.py  test_data_loader.py
flask-hello-world/: .gitignore  app.py
